--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   readsms: ^0.1.0+3
   permission_handler: ^11.3.1
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
